# zenremote

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  grap.html
.github/: copilot-instructions.md
.github/workflows/: unit-tests.yml
docs/: 00_START_HERE.md  CONTROL_MESSAGE_DESIGN_SUMMARY.md  DELIVERY_COMPLETE.md  IMPLEMENTATION_PLAN.md  architecture_comparison.md  architecture_refactoring_comparison.md  directory_restructure_final.md  directory_structure.md  ffmpeg_hardware_codec_guide.md  final_directory_structure.md  network_architecture.md  network_architecture_correct.md  phase1_media_pipeline_design.md  remote_desktop_project_design.md  udp_transport_design.md  webrtc_architecture_analysis.md  windows_screen_capture_analysis.md
examples/: hardware_detection_tool.cpp  screen_capturer_example.cpp  screen_capturer_improved_example.cpp
resources/: zenplay.qrc
resources/styles/: dark_theme.qss
src/: main.cpp
src/app/session/: controlled_session.cpp  controlled_session.h  controller_session.cpp  controller_session.h
src/common/: blocking_queue.h  common_def.h  error.cpp  error.h  error.h.backup  error_macros.h  ffmpeg_error_utils.cpp  ffmpeg_error_utils.h  log_manager.cpp  log_manager.h  player_state_manager.cpp  player_state_manager.h  sdl_error_utils.h  thread_safe_queue.h  timer.cpp  timer.h  timer_util.h  win32_error_utils.cpp  win32_error_utils.h
src/config/: README.md  config_manager.cpp  config_manager.h  global_config.cpp  global_config.cpp.backup  global_config.h
src/media/capture/: screen_capturer.h  screen_capturer_win.cpp  screen_capturer_win.h
src/media/codec/: ffmpeg_types.cpp  ffmpeg_types.h
src/media/codec/decoder/: hw_decoder_context.cpp  hw_decoder_context.h  hw_decoder_type.h  video_decoder.cpp  video_decoder.h
src/media/codec/encoder/: color_converter.cpp  color_converter.h  hardware_encoder.cpp  hardware_encoder.h  hw_encoder_type.h  software_encoder.cpp  software_encoder.h  video_encoder.cpp  video_encoder.h
src/media/renderer/: d3d11_renderer.cpp  d3d11_renderer.h  sdl_renderer.cpp  sdl_renderer.h  video_renderer.cpp  video_renderer.h
src/network/: README.md  README_NEW.md
src/network/connection/: base_connection.h  direct_connection.cpp  direct_connection.h  turn_connection.cpp  turn_connection.h
src/network/io/: udp_socket.cpp  udp_socket.h
src/network/protocol/: handshake.cpp  handshake.h  jitter_buffer.cpp  jitter_buffer.h  pacer.cpp  pacer.h  packet.h  protocol.h  reliable_input.cpp  reliable_input.h  rtp_receiver.cpp  rtp_receiver.h  rtp_sender.cpp  rtp_sender.h
src/network/reliable/: reliable_transport.cpp  reliable_transport.h
src/network/rtp/: rtp_packet.h  rtp_sender.cpp  rtp_sender.h
src/transport/: peer_connection.cpp  peer_connection.h
src/transport/channel/: data_channel.h  reliable_channel.cpp  reliable_channel.h
src/transport/track/: audio_track.cpp  audio_track.h  media_track.h  video_track.cpp  video_track.h
tests/: CMakeLists.txt  test_blocking_queue.cpp  test_error_utils.cpp  test_jitter_buffer.cpp  test_main.cpp  test_media_codec.cpp  test_network_protocol.cpp  test_pacer.cpp  test_result_error.cpp  test_rtp_packet.cpp  test_rtp_receiver.cpp  test_screen_capturer.cpp  test_thread_safe_queue.cpp  test_win32_error_utils.cpp
